--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Match Unbound</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -16,18 +17,20 @@
         <div class="col-md-2">
             <img src="../images/heather/handbook-logo.png">
         </div>
-        <div class="col-md-8">
+        <div class="col-md-7">
             <h1>
                 Match Unbound
             </h1>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-1">
             <a href="#">
                 Settings
             </a><br>
             <a href="#">
                 About Game
-            </a><br>
+            </a>
+        </div>
+        <div class="col-md-2">
             <button id="btn-reset" class="btn reset">
                 Reset Game
             </button>
@@ -61,30 +64,174 @@
         <div class="col-md-9">
             <div id="game-area" class="panel panel-default">
                 <!-- Playing card set-up: .front = cards to match, .back = identical card backs -->
-                <div class="card">
-                    <div class="front">Clay<img src="../images/heather/card-fronts/clay-card.png" /></div>
-                    <div class="back"><img src="../images/heather/penumbra-cardback.png" /></div>
-                </div>
-                <div class="card">
-                    <div class="front">Clay<img src="../images/heather/card-fronts/clay-card.png" /></div>
-                    <div class="back"><img src="../images/heather/penumbra-cardback.png" /></div>
-                </div>
-                <div class="card">
-                    <div class="front">Deckle<img src="../images/heather/card-fronts/deckle-card.png" /></div>
-                    <div class="back"><img src="../images/heather/penumbra-cardback.png" /></div>
-                </div>
-                <div class="card">
-                    <div class="front">Deckle<img src="../images/heather/card-fronts/deckle-card.png" /></div>
-                    <div class="back"><img src="../images/heather/penumbra-cardback.png" /></div>
-                </div>
-                <div class="card">
-                    <div class="front">Kat<img src="../images/heather/card-fronts/kat-card.png" /></div>
-                    <div class="back"><img src="../images/heather/penumbra-cardback.png" /></div>
-                </div>
-                <div class="card">
-                    <div class="front">Kat<img src="../images/heather/card-fronts/kat-card.png" /></div>
-                    <div class="back"><img src="../images/heather/penumbra-cardback.png" /></div>
-                </div>
+                <div><!-- First row, cards 1 - 6 -->
+                    <div class="card">
+                        <div class="front">
+                            Clay
+                            <img src="../images/heather/card-fronts/clay-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Clay
+                            <img src="../images/heather/card-fronts/clay-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Deckle
+                            <img src="../images/heather/card-fronts/deckle-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Deckle
+                            <img src="../images/heather/card-fronts/deckle-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Kat
+                            <img src="../images/heather/card-fronts/kat-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Kat
+                            <img src="../images/heather/card-fronts/kat-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                </div><!-- end First Row -->
+                <div><!-- Second Row, cards 7 - 12 -->
+                    <div class="card">
+                        <div class="front">
+                            Lapin
+                            <img src="../images/heather/card-fronts/lapin-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Lapin
+                            <img src="../images/heather/card-fronts/lapin-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Maldavis
+                            <img src="../images/heather/card-fronts/maldavis-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Maldavis
+                            <img src="../images/heather/card-fronts/maldavis-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Mat
+                            <img src="../images/heather/card-fronts/mat-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Mat
+                            <img src="../images/heather/card-fronts/mat-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                </div><!-- end Second Row -->
+                <div><!-- Third Row, cards 13 - 18 -->
+                    <div class="card">
+                        <div class="front">
+                            Unbound Member
+                            <img src="../images/heather/card-fronts/member-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Unbound Member
+                            <img src="../images/heather/card-fronts/member-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Neel
+                            <img src="../images/heather/card-fronts/neel-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            Neel
+                            <img src="../images/heather/card-fronts/neel-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            San Francisco
+                            <img src="../images/heather/card-fronts/sanfran-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="front">
+                            San Francisco
+                            <img src="../images/heather/card-fronts/sanfran-card.png">
+                        </div>
+                        <div class="back">
+                            <img src="../images/heather/penumbra-cardback.png">
+                        </div>
+                    </div>
+                </div><!-- end Third Row -->
             </div><!-- end #game-area, .panel, .panel-default -->
         </div><!-- end .col-md-9 -->
     </div><!-- end .row -->
