--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -9,7 +9,6 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="script.js"></script>
     <script src="http://learning-fuze.github.io/memory_match/v0.1/script.js"></script>
-
 </head>
 <body>
     <!-- Header: logo, title, reset button -->
@@ -17,23 +16,18 @@
         <div class="col-md-2">
             <img src="../images/heather/handbook-logo.png">
         </div>
-        <div class="col-md-7">
+        <div class="col-md-8">
             <h1>
                 Match Unbound
             </h1>
         </div>
-        <div class="col-md-1">
+        <div class="col-md-2">
             <a href="#">
                 Settings
             </a><br>
-            <a href="#">
+            <a href="about.html">
                 About Game
             </a>
-        </div>
-        <div class="col-md-2">
-            <button id="btn-reset" class="btn reset">
-                Reset Game
-            </button>
         </div>
     </header> <!-- end .jumbotron, Header-->
     <!-- Game Body -->
@@ -57,6 +51,9 @@
                         <span class="label label-default">Accuracy</span> :
                         <span class="value"></span>
                     </p>
+                    <button id="btn-reset" class="btn reset">
+                        Reset Game
+                    </button>
                 </div><!-- end .panel-body -->
             </div><!-- end #game-stats, .panel, .panel-default -->
         </div><!-- end .col-md-3 Game Statistics -->
