memory_match V0.1 - Heather Hernandez

--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -13,15 +13,15 @@
 <body>
     <!-- Header: logo, title, reset button -->
     <header class="jumbotron">
-        <div class="col-md-2">
+        <div class="col-sm-2 col-md-2">
             <img src="../images/heather/handbook-logo.png">
         </div>
-        <div class="col-md-8">
+        <div class="col-sm-8 col-md-8">
             <h1>
                 Match Unbound
             </h1>
         </div>
-        <div class="col-md-2">
+        <div class="col-sm-2 col-md-2">
             <a href="#">
                 Settings
             </a><br>
@@ -31,9 +31,9 @@
         </div>
     </header> <!-- end .jumbotron, Header-->
     <!-- Game Body -->
-    <div class="row">
+    <div class="row .row-eq-height">
         <!-- Game Statistics: left side -->
-        <div class="col-md-3">
+        <div class="col-sm-3 col-md-3">
             <div id="game-stats" class="panel panel-default">
                 <div class="panel-heading">
                     <h3>Stats</h3>
@@ -58,7 +58,7 @@
             </div><!-- end #game-stats, .panel, .panel-default -->
         </div><!-- end .col-md-3 Game Statistics -->
         <!-- Card field: right side -->
-        <div class="col-md-9">
+        <div class="col-sm-9 col-md-9">
             <div id="game-area" class="panel panel-default">
                 <!-- Playing card set-up: .front = cards to match, .back = identical card backs -->
                 <div><!-- First row, cards 1 - 6 -->
