--- a/v0.1/about.html
+++ b/v0.1/about.html
@@ -44,7 +44,7 @@
         </div>
     </header>
 
-    <div class="row">
+    <div class="row row-eq-height">
         <!-- Game Description -->
         <div class="col-md-4">
             <h3>
@@ -98,9 +98,9 @@
             <img id="profile_pic" src="../images/heather/Heather.jpg" alt="Photo of the Developer">
             <p>
                 View Heather's
-                <a href="#">other work</a><!-- Projects section -->
+                <a href="#">other work</a><!-- Projects section (profile site) -->
                 and additional
-                <a href="#">information</a><!-- About Me section -->
+                <a href="#">information</a><!-- About Me section (profile site) -->
                 about her.
             </p>
         </div><!-- end .col-md-4, Developer Pic & link -->
