Memory Match v1 - Heather Hernandez

--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -20,9 +20,7 @@
             <img src="../images/heather/handbook-logo.png">
         </div>
         <div class="col-sm-8 col-md-8 col-lg-8">
-            <h1>
-                Match Unbound
-            </h1>
+            <img src="../images/heather/title.png" alt="Match Unbound">
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2">
             <a href="about.html">
@@ -34,7 +32,7 @@
         </div>
     </header> <!-- end .jumbotron, Header-->
     <!-- Game Body -->
-    <div class="row .row-eq-height">
+    <div class="row">
         <!-- Game Statistics & Reset Button: left side -->
         <div class="col-sm-3 col-md-3 col-lg-3">
             <div id="game-stats" class="panel">
