Memory Match v0.5 - Heather Hernandez

--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
             <h3>
                 About The Game
             </h3>
-            <p>The memory matching game &#34Match Unbound&#34 was inspired by the book <em>Mr. Penumbra's 24-Hour Bookstore</em>.
-               The cards draw on character traits and locations throughout the book. This lead to the title being &#34Match
-               Unbound&#34, as some of the characters in the book are considered Unbound in their &#34book club&#34.
+            <p>The memory matching game &#34;Match Unbound&#34; was inspired by the book <em>Mr. Penumbra's 24-Hour Bookstore</em>.
+               The cards draw on character traits and locations throughout the book. This lead to the title being &#34;Match
+               Unbound&#34;, as some of the characters in the book are considered Unbound in their &#34;book club&#34;.
             </p>
         </div><!-- end .col-md-4, Game Description
         <!-- Skill List -->
