Memory Match v0.5 - Heather Hernandez

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <span class="value"></span>
                     </p>
                     <!-- Reset Button -->
-                    <button id="btn-reset" class="btn reset">
+                    <button id="btn-reset" class="btn reset" onclick="reset(this)">
                         Reset Game
                     </button>
                 </div><!-- end .panel-body -->
