Memory Match v0.5 - Heather Hernandez

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div><!-- First row, cards 1 - 6 & Winner notice -->
                     <div class="card">
                         <div class="front">
-                            Clay
+                            1 Clay
                             <img src="images/heather/card-fronts/clay-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
@@ -76,7 +76,7 @@
                     </div>
                     <div class="card">
                         <div class="front">
-                            Clay
+                            2 Clay
                             <img src="images/heather/card-fronts/clay-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
@@ -85,7 +85,7 @@
                     </div>
                     <div class="card">
                         <div class="front">
-                            Deckle
+                            1 Deckle
                             <img src="images/heather/card-fronts/deckle-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
@@ -94,32 +94,32 @@
                     </div>
                     <div class="card">
                         <div class="front">
-                            Deckle
+                            2 Deckle
                             <img src="images/heather/card-fronts/deckle-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
-                    <!-- <div class="card">
+                    <!-- Currently working on 4 card game
+                    <div class="card">
                         <div class="front">
-                            Kat
+                            1 Kat
                             <img src="images/heather/card-fronts/kat-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Kat
+                            2 Kat
                             <img src="images/heather/card-fronts/kat-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
-                    </div>-->
-
+                    </div> -->
                 </div><!-- end First Row -->
                 <!--<div>    Second Row, cards 7 - 12
                     <div class="card">
