memory match - game play for 3+ matches

--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
-                    <!-- Currently working on 4 card game
                     <div class="card">
                         <div class="front">
                             1 Kat
@@ -119,9 +118,10 @@
                         <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
-                    </div> -->
+                    </div>
                 </div><!-- end First Row -->
-                <!--<div>    Second Row, cards 7 - 12
+                <!-- Currently working on 6 card game
+                <div>    Second Row, cards 7 - 12
                     <div class="card">
                         <div class="front">
                             Lapin
