Memory Match v0.5 - Heather Hernandez

--- a/index.html
+++ b/index.html
@@ -120,119 +120,118 @@
                         </div>
                     </div>
                 </div><!-- end First Row -->
-                <!-- Currently working on 6 card game
-                <div>    Second Row, cards 7 - 12
+                <div> <!-- Second Row, cards 7 - 12 -->
                     <div class="card">
                         <div class="front">
-                            Lapin
+                            1 Lapin
                             <img src="images/heather/card-fronts/lapin-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Lapin
+                            2 Lapin
                             <img src="images/heather/card-fronts/lapin-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Maldavis
+                            1 Maldavis
                             <img src="images/heather/card-fronts/maldavis-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Maldavis
+                            2 Maldavis
                             <img src="images/heather/card-fronts/maldavis-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Mat
+                            1 Mat
                             <img src="images/heather/card-fronts/mat-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Mat
+                            2 Mat
                             <img src="images/heather/card-fronts/mat-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
-                </div>    end Second Row -->
-                <!--<div>    Third Row, cards 13 - 18
+                </div> <!-- end Second Row -->
+                <div> <!-- Third Row, cards 13 - 18 -->
                     <div class="card">
                         <div class="front">
-                            Unbound Member
+                            1 Unbound Member
                             <img src="images/heather/card-fronts/member-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Unbound Member
+                            2 Unbound Member
                             <img src="images/heather/card-fronts/member-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Neel
+                            1 Neel
                             <img src="images/heather/card-fronts/neel-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            Neel
+                            2 Neel
                             <img src="images/heather/card-fronts/neel-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            San Francisco
+                            1 San Francisco
                             <img src="images/heather/card-fronts/sanfran-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
-                            San Francisco
+                            2 San Francisco
                             <img src="images/heather/card-fronts/sanfran-card.png">
                         </div>
-                        <div class="back">
+                        <div class="back" onclick="card_clicked(this)">
                             <img src="images/heather/penumbra-cardback.png">
                         </div>
                     </div>
-                </div>      end Third Row -->
+                </div> <!-- end Third Row -->
                 <!-- Winner screen, only shows on game completion -->
                 <div id="winner">
                     Congratulations you have matched all the cards!!!
