memory match v0.5.1 - moved images

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <!-- Header: logo, title, game settings & about game -->
     <header class="jumbotron">
         <div class="col-sm-2 col-md-2 col-lg-2">
-            <img src="images/heather/handbook-logo.png">
+            <img src="images/handbook-logo.png">
         </div>
         <div class="col-sm-8 col-md-8 col-lg-8">
-            <img src="images/heather/title.png" alt="Match Unbound">
+            <img src="images/title.png" alt="Match Unbound">
         </div>
         <div class="col-sm-2 col-md-2 col-lg-2">
             <a href="about.html">
@@ -36,7 +36,7 @@
         <!-- Game Statistics & Reset Button: left side -->
         <div class="col-sm-3 col-md-3 col-lg-3">
             <div id="game-stats" class="panel">
-                <img id="stats-book" src="images/heather/stats-book.png">
+                <img id="stats-book" src="images/stats-book.png">
                 <div class="panel-heading">
                     <h3>Stats</h3>
                 </div>
@@ -61,62 +61,62 @@
             </div><!-- end #game-stats, .panel -->
         </div><!-- end .col-sm-3, .col-md-3, .col-lg-3 Game Statistics -->
         <!-- Card field (18 cards): right side -->
-        <div class="col-sm-9 col-md-9 col-lg-9">
+        <div class="col-sm-8 col-md-8 col-lg-8">
             <div id="game-area" class="panel panel-default">
                 <!-- Playing card set-up: .front = cards to match, .back = identical card backs -->
                 <div><!-- First row, cards 1 - 6 & Winner notice -->
                     <div class="card">
                         <div class="front">
                             1 Clay
-                            <img src="images/heather/card-fronts/clay-card.png">
+                            <img src="images/card-fronts/clay-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 Clay
-                            <img src="images/heather/card-fronts/clay-card.png">
+                            <img src="images/card-fronts/clay-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             1 Deckle
-                            <img src="images/heather/card-fronts/deckle-card.png">
+                            <img src="images/card-fronts/deckle-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 Deckle
-                            <img src="images/heather/card-fronts/deckle-card.png">
+                            <img src="images/card-fronts/deckle-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             1 Kat
-                            <img src="images/heather/card-fronts/kat-card.png">
+                            <img src="images/card-fronts/kat-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 Kat
-                            <img src="images/heather/card-fronts/kat-card.png">
+                            <img src="images/card-fronts/kat-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                 </div><!-- end First Row -->
@@ -124,55 +124,55 @@
                     <div class="card">
                         <div class="front">
                             1 Lapin
-                            <img src="images/heather/card-fronts/lapin-card.png">
+                            <img src="images/card-fronts/lapin-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 Lapin
-                            <img src="images/heather/card-fronts/lapin-card.png">
+                            <img src="images/card-fronts/lapin-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             1 Maldavis
-                            <img src="images/heather/card-fronts/maldavis-card.png">
+                            <img src="images/card-fronts/maldavis-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 Maldavis
-                            <img src="images/heather/card-fronts/maldavis-card.png">
+                            <img src="images/card-fronts/maldavis-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             1 Mat
-                            <img src="images/heather/card-fronts/mat-card.png">
+                            <img src="images/card-fronts/mat-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 Mat
-                            <img src="images/heather/card-fronts/mat-card.png">
+                            <img src="images/card-fronts/mat-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                 </div> <!-- end Second Row -->
@@ -180,55 +180,55 @@
                     <div class="card">
                         <div class="front">
                             1 Unbound Member
-                            <img src="images/heather/card-fronts/member-card.png">
+                            <img src="images/card-fronts/member-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 Unbound Member
-                            <img src="images/heather/card-fronts/member-card.png">
+                            <img src="images/card-fronts/member-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             1 Neel
-                            <img src="images/heather/card-fronts/neel-card.png">
+                            <img src="images/card-fronts/neel-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 Neel
-                            <img src="images/heather/card-fronts/neel-card.png">
+                            <img src="images/card-fronts/neel-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             1 San Francisco
-                            <img src="images/heather/card-fronts/sanfran-card.png">
+                            <img src="images/card-fronts/sanfran-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                     <div class="card">
                         <div class="front">
                             2 San Francisco
-                            <img src="images/heather/card-fronts/sanfran-card.png">
+                            <img src="images/card-fronts/sanfran-card.png">
                         </div>
                         <div class="back" onclick="card_clicked(this)">
-                            <img src="images/heather/penumbra-cardback.png">
+                            <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
                 </div> <!-- end Third Row -->
@@ -238,6 +238,9 @@
                 </div>
             </div><!-- end #game-area, .panel, .panel-default -->
         </div><!-- end .col-sm-9, .col-md-9, .col-lg-9 -->
+        <div class="col-sm-1 col-md-1 col-lg-1">
+            <img src="images/ladder.png" id="ladder">
+        </div>
     </div><!-- end .row -->
 
 </body>
