Memory Match v0.5 - Heather Hernandez

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <!-- Stylesheets: Bootstrap & Custom -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <!-- Script Libraries: JQuery, Custom, & LearningFuze -->
+    <!-- Script Libraries: JQuery, Custom -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="script.js"></script>
-    <!-- <script src="http://learning-fuze.github.io/memory_match/v0.1/script.js"></script> -->
+    <script src="main.js"></script>
+
 </head>
 <body>
 <!-- Layout styled with bootstrap: col-sm, col-md, & col-lg -->
