Memory Match v0.5 - Heather Hernandez

--- a/index.html
+++ b/index.html
@@ -38,19 +38,23 @@
             <div id="game-stats" class="panel">
                 <img id="stats-book" src="images/stats-book.png">
                 <div class="panel-heading">
-                    <h3>Stats</h3>
+                    <h3>Narratio</h3>
                 </div>
                 <div class="panel-body">
+                    <p>
+                        <span class="label">Member Number</span>:
+                        <span class="member_num"></span>
+                    </p>
                     <p class="games-played">
-                        <span class="label label-default">Games played</span> :
+                        <span class="label">Games played</span>:
                         <span class="value"></span>
                     </p>
                     <p class="attempts">
-                        <span class="label label-default">Attempts</span> :
+                        <span class="label">Attempts</span>:
                         <span class="value"></span>
                     </p>
                     <p class="accuracy">
-                        <span class="label label-default">Accuracy</span> :
+                        <span class="label">Accuracy</span>:
                         <span class="value"></span>
                     </p>
                     <!-- Reset Button -->
