--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             1 Clay
                             <img src="images/card-fronts/clay-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back" >
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             2 Clay
                             <img src="images/card-fronts/clay-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                             1 Deckle
                             <img src="images/card-fronts/deckle-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                             2 Deckle
                             <img src="images/card-fronts/deckle-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                             1 Kat
                             <img src="images/card-fronts/kat-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                             2 Kat
                             <img src="images/card-fronts/kat-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             1 Lapin
                             <img src="images/card-fronts/lapin-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             2 Lapin
                             <img src="images/card-fronts/lapin-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                             1 Maldavis
                             <img src="images/card-fronts/maldavis-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                             2 Maldavis
                             <img src="images/card-fronts/maldavis-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                             1 Mat
                             <img src="images/card-fronts/mat-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                             2 Mat
                             <img src="images/card-fronts/mat-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                             1 Unbound Member
                             <img src="images/card-fronts/member-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                             2 Unbound Member
                             <img src="images/card-fronts/member-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                             1 Neel
                             <img src="images/card-fronts/neel-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                             2 Neel
                             <img src="images/card-fronts/neel-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             1 San Francisco
                             <img src="images/card-fronts/sanfran-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
@@ -231,7 +231,7 @@
                             2 San Francisco
                             <img src="images/card-fronts/sanfran-card.png">
                         </div>
-                        <div class="back" onclick="card_clicked(this)">
+                        <div class="back">
                             <img src="images/penumbra-cardback.png">
                         </div>
                     </div>
