Memory Match v0.5 - Heather Hernandez

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="panel-body">
                     <p>
-                        <span class="label">Member Number</span>:
+                        <span class="label">Member</span>:
                         <span class="member_num"></span>
                     </p>
                     <p class="games-played">
